Fix z-index to hide highlights below autocomplete.

--- a/src/components/SearchApp.css
+++ b/src/components/SearchApp.css
@@ -57,6 +57,10 @@
 
 /* Search bar start */
 
+.auto-complete {
+    z-index: 100;
+}
+
 .form-rounded {
     border-radius: 1rem !important;
 }
